@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="iso-8859-1" ?>
 <otrs_config version="1.0" init="Framework">
-    <CVS>$Id: Framework.xml,v 1.193 2009-01-13 12:02:42 tr Exp $</CVS>
+    <CVS>$Id: Framework.xml,v 1.194 2009-02-04 13:28:53 tr Exp $</CVS>
     <ConfigItem Name="SecureMode" Required="1" Valid="1">
         <Description Lang="en">If enabled, the web installer (http://yourhost.example.com/otrs/installer.pl) can't be used. This setting should be set to "Yes" to prevent your system from being hijacked. If set to "No", you can reinstall your system. Your current basic configuration will be used to pre-populate the questions within the installer script.</Description>
         <Description Lang="de">Wird diese Option aktiviert, kann der Web-Installer (installer.pl) nicht genutzt werden.</Description>
@@ -5295,6 +5295,18 @@ Your OTRS Notification Master
                     </Hash>
                 </Item>
             </Hash>
+        </Setting>
+    </ConfigItem>
+    <ConfigItem Name="Secure::DisableBanner" Required="0" Valid="0">
+        <Description Lang="en">If enabled, the OTRS version tag will be removed from the HTML headers.</Description>
+        <Description Lang="de">Wird diese Option aktiviert, wird die OTRS-Versionsangabe aus den HTML-Headern entfernt.</Description>
+        <Group>Framework</Group>
+        <SubGroup>Core</SubGroup>
+        <Setting>
+            <Option SelectedID="0">
+                <Item Key="0">No</Item>
+                <Item Key="1">Yes</Item>
+            </Option>
         </Setting>
     </ConfigItem>
 </otrs_config>
